[package]
name = "christmas-card"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Marvin Drees <marvin.drees@9elements.com>"]
resolver = "2"

[dependencies]
assign-resources = "0.4.1"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "nightly"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.2.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rom-func-cache", "rom-v2-intrinsics", "rp2040"] }
embassy-time = "0.3.2"
futures = { version = "0.3.31", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
panic-probe = "0.3.2"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
smart-leds = "0.4.0"
static_cell = "2.1.0"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "d3fd34e5ffa45a71cca650fc13d2438f1c2f0861" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "d3fd34e5ffa45a71cca650fc13d2438f1c2f0861" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "d3fd34e5ffa45a71cca650fc13d2438f1c2f0861" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "d3fd34e5ffa45a71cca650fc13d2438f1c2f0861" }

[profile.release]
debug = true
incremental = false
codegen-units = 1
opt-level = "s"
lto = "fat"
